--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,19 @@
-# Compiled class file
-*.class
+# IntelliJ IDEA
+.idea/
+*.iml
 
-# Log file
+# Java
+*.class
 *.log
+
+# Build outputs
+out/
+target/
+build/
+
+# OS files
+.DS_Store
+Thumbs.db
 
 # BlueJ files
 *.ctxt
